package net.combatserver.protobuf; 
import "DataStructures.proto";

option optimize_for = SPEED;  

message ChangeRoomRequestData {
	required int32 toRoomId =1;//

}
message ChangeRoomResponseData {
	required Room room = 1;
}